--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
     padding: 20px;
     box-sizing: border-box;
     display: inline-block;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 .about {
