--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ nav {
     color: white;
     position: relative;
     left: 10px;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 .navlist {
@@ -32,6 +33,7 @@ nav {
     color: white;
     padding-right: 10px;
     box-sizing: border-box;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 body {
