--- a/style.css
+++ b/style.css
@@ -24,15 +24,16 @@ nav {
 .navlist {
     list-style: none;
     position: absolute;
-    right: 10px;
+    right: 25px;
 }
 
 .navlist li {
     display: inline-block;
     position: relative;
     color: white;
-    padding-right: 10px;
+    padding-right: 25px;
     box-sizing: border-box;
+    font-weight: 400;
     font-family: 'Julius Sans One', sans-serif;
 }
 
