--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Sofia Sans', sans-serif;;
+}
+
 nav {
     background-color: #585858;
     position: fixed;
@@ -65,6 +69,18 @@ body {
     box-sizing: border-box;
     display: inline-block;
     font-family: 'Julius Sans One', sans-serif;
+}
+
+.maintitle h2 {
+    color: white;
+    font-weight: 400;
+    font-size: 32px;
+    margin-top: 142.25px;
+    margin-bottom: 0; 
+    width: 75%;
+    padding: 20px;
+    box-sizing: border-box;
+    display: inline-block;
 }
 
 .about {
