--- a/style.css
+++ b/style.css
@@ -6,6 +6,23 @@ html {
     scroll-behavior: smooth;
 }
 
+a {
+    outline: none;
+    text-decoration: none;
+}
+
+a:link {
+    color: white; 
+}
+
+a:visited {
+    color: white; 
+}
+
+a:hover {
+    color: orange;
+}
+
 nav {
     background-color: #585858;
     position: fixed;
@@ -43,10 +60,6 @@ nav {
     box-sizing: border-box;
     font-weight: 400;
     font-size: 21px;
-}
-
-.navlist a {
-
 }
 
 body {
