--- a/style.css
+++ b/style.css
@@ -123,9 +123,10 @@ body {
 
 .about h1 {
     margin-left: 25vw;
+    margin-top: 10vh;
     color: black;
     font-weight: 300;
-    font-size: 32px;
+    font-size: 48px;
     margin-top: 0px;
     margin-bottom: 0px; 
     width: 75%;
