--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 
 .about h1 {
     margin-left: 25vw;
-    margin-top: 10vh;
+    padding-top: 10vh;
     color: black;
     font-weight: 300;
     font-size: 48px;
