--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ body {
 
 .about h2 {
     margin-left: 12.5vw;
+    margin-top: 0;
+    margin-bottom: 0;
     color: black;
     font-weight: 300;
     font-size: 32px;
