about background to white

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
     box-sizing: border-box;
     height: 100vh;
     width: 100vw;
-    background-color: orange;
+    background-color: white;
 }
 
 .about h1 {
