--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
     font-family: 'Julius Sans One', sans-serif;
 }
 
-.about p {
+.textbox {
     margin-left: 25vw;
     margin-top: 10vh;
     color: black;
