--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
 
 .textbox {
     margin-left: 25vw;
+    margin-right: 25vw;
     margin-top: 10vh;
     color: black;
     font-weight: 400;
@@ -132,7 +133,7 @@ body {
 
 .about h1 {
     margin-left: 0vw;
-    margin-top: 10vh;
+    margin-top: 0vh;
     color: black;
     font-weight: 300;
     font-size: 75px;
