--- a/style.css
+++ b/style.css
@@ -161,7 +161,8 @@ ol {
 }
 
 .about li {
-    margin-left: 12.5vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
     margin-top: 5vh;
     color: black;
     font-weight: 400;
@@ -175,6 +176,30 @@ ol {
     height: 100vh;
     width: 100vw;
     background-color: blue;
+}
+
+.joinSection h1 {
+    color: black;
+    font-weight: 300;
+    font-size: 75px;
+    margin-bottom: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    display: inline-block;
+    font-family: 'Julius Sans One', sans-serif;
+    text-decoration: underline;
+    text-align: right;
+}
+
+.joinSection p {
+    padding: 0;
+    text-align: right;
+}
+
+.pEmail {
+    font-style: italic;
+    text-align: right;
+    padding: 0;
 }
 
 .donate {
