--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
     font-weight: 400;
     font-size: 24px;
     box-sizing: border-box;
+    display: inline-block;
 }
 
 ol {
@@ -183,6 +184,7 @@ ol {
     font-weight: 300;
     font-size: 75px;
     margin-bottom: 0px;
+    margin-right: 0;
     padding: 0px;
     box-sizing: border-box;
     display: inline-block;
@@ -193,6 +195,7 @@ ol {
 
 .join p {
     padding: 0;
+    margin-right: 0;
     text-align: right;
     color: white;
 }
@@ -201,6 +204,7 @@ ol {
     font-style: italic;
     text-align: right;
     padding: 0;
+    margin-right: 0;
     color: white;
 }
 
