--- a/style.css
+++ b/style.css
@@ -211,3 +211,36 @@ ol {
     width: 100vw;
     background-color: red;
 }
+
+footer {
+    background-color: #585858;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 50%);
+    z-index: 4;
+}
+
+footer h1 {
+    font-weight: 600;
+    font-size: 24px;
+    display: inline;
+    color: white;
+    position: relative;
+    left: 10px;
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+footer h2 {
+    display: inline-block;
+    position: relative;
+    color: white;
+    padding-right: 33px;
+    box-sizing: border-box;
+    font-weight: 400;
+    font-size: 21px;
+}
