--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ ol {
 
 footer {
     background-color: #585858;
-    position: fixed;
+    position: inline-block;
     top: 0;
     left: 0;
     width: 100%;
