--- a/style.css
+++ b/style.css
@@ -214,8 +214,8 @@ ol {
 
 footer {
     background-color: #585858;
-    position: inline-block;
-    top: 0;
+    position: fixed;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 50px;
@@ -225,7 +225,7 @@ footer {
     z-index: 4;
 }
 
-.copyright {
+.copyright h2 {
     display: inline-block;
     position: relative;
     color: white;
@@ -236,7 +236,7 @@ footer {
     font-size: 21px;
 }
 
-.email {
+.email h1 {
     font-weight: 600;
     font-size: 24px;
     display: inline;
@@ -246,7 +246,7 @@ footer {
     font-family: 'Julius Sans One', sans-serif;
 }
 
-.donation {
+.donation h2 {
     display: inline-block;
     position: absolute;
     right: 33px;
