--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ footer {
     font-weight: 600;
     font-size: 24px;
     color: white;
+    display: inline-block;
     position: relative;
     margin: auto;
     width: 50%;
