--- a/style.css
+++ b/style.css
@@ -226,12 +226,14 @@ footer {
 
 .copyright {
     display: inline-block;
+    padding-left: 33px;
 }
 
 .copyright h2 {
     color: white;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 12px;
+    font-style: italic;
 }
 
 .email {
@@ -242,7 +244,7 @@ footer {
 
 .email h1 {
     font-weight: 600;
-    font-size: 24px;
+    font-size: 16px;
     color: white;
     font-family: 'Julius Sans One', sans-serif;
     text-align: center;
@@ -251,10 +253,12 @@ footer {
 .donation {
     display: inline-block;
     right: 0;
+    padding-right: 33px;
 }
 
 .donation h2 {
     color: white;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 12px;
+    font-style: italic;
 }
