--- a/style.css
+++ b/style.css
@@ -227,6 +227,8 @@ footer {
 .copyright {
     display: inline-block;
     padding-left: 33px;
+    margin: auto;
+    left: 0;
 }
 
 .copyright h2 {
@@ -252,8 +254,9 @@ footer {
 
 .donation {
     display: inline-block;
-    right: 0;
     padding-right: 33px;
+    margin: 0;
+    right: 0;
 }
 
 .donation h2 {
