--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 html {
     scroll-behavior: smooth;
+    width: 100vw;
+    height: 100vh;
 }
 
 a {
@@ -28,8 +30,8 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50px;
+    width: 100vw;
+    height: 5vh;
     display: flex;
     align-items: center;
     box-shadow: 0 2px 4px rgb(0 0 0 / 50%);
@@ -221,8 +223,8 @@ footer {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 50px;
+    width: 100vw;
+    height: 5vh;
     display: flex;
     box-shadow: 0 2px 4px rgb(0 0 0 / 50%);
     z-index: 4;
