--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
     position: relative;
     top: 50px;
     margin: 0;
-    width: 100%;
+    width: 100vw;
 }
 
 .maintitle {
@@ -99,9 +99,9 @@ body {
     color: white;
     font-weight: 300;
     font-size: 350px;
-    margin-top: 142.25px;
+    margin-top: 10vh;
     margin-bottom: 0; 
-    width: 75%;
+    width: 75vw;
     box-sizing: border-box;
     display: inline-block;
     font-family: 'Julius Sans One', sans-serif;
@@ -111,10 +111,10 @@ body {
     color: white;
     font-weight: 400;
     font-size: 32px;
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 0; 
-    width: 50%;
-    padding: 0px;
+    width: 50vw;
+    padding: 0;
     box-sizing: border-box;
     display: inline-block;
 }
