--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav {
 
 .navtitle {
     font-weight: 600;
-    font-size: 24px;
+    font-size: 2.5vh;
     display: inline-block;
     color: white;
     position: relative;
@@ -111,8 +111,8 @@ body {
 .maintitle h2 {
     color: white;
     font-weight: 400;
-    font-size: 32px;
-    margin-top: 0;
+    font-size: 3vh;
+    margin-top: 5vh;
     margin-bottom: 0; 
     width: 50vw;
     padding: 0;
@@ -241,7 +241,7 @@ footer {
 .copyright h2 {
     color: white;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 1vh;
     font-style: italic;
 }
 
@@ -253,7 +253,7 @@ footer {
 
 .email h1 {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1vh;
     color: white;
     text-align: center;
 }
@@ -268,6 +268,6 @@ footer {
 .donation h2 {
     color: white;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 1vh;
     font-style: italic;
 }
