--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
 
 .navtitleLink {
     font-weight: 600;
-    font-size: 24px;
+    font-size: 2.5vh;
     display: inline-block;
     color: white;
     position: relative;
@@ -100,7 +100,7 @@ body {
     color: white;
     font-weight: 300;
     font-size: 20vw;
-    margin-top: 10vh;
+    margin-top: 12.5vh;
     margin-bottom: 0; 
     width: 75vw;
     box-sizing: border-box;
